# transnormer-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: syntax-and-unit-tests.yml
docs/: background.md
docs/modifiers/: language_detection_modifier.md  language_tool_modifier.md  lm_score_modifier.md  replace_ntom_cross_layer_modifier.md  replace_raw_modifier.md  replace_token_1to1_modifier.md  replace_token_1ton_modifier.md
src/transnormer_data/: base_dataset_modifier.py  base_maker.py  detokenizer.py  utils.py
src/transnormer_data/cli/: custom-test.py  dataset2lexicon.py  make_dataset.py  merge_datasets.py  modify_dataset.py  split_dataset.py  subsample_dataset.py
src/transnormer_data/maker/: dta_eval_maker.py  dta_maker.py  dtak_maker.py  ridges_maker.py
src/transnormer_data/modifier/: case_modifier.py  gpt_modifier.py  language_detection_modifier.py  language_tool_modifier.py  lm_score_modifier.py  replace_ntom_cross_layer_modifier.py  replace_raw_modifier.py  replace_token_1to1_modifier.py  replace_token_1ton_modifier.py  seq2seq_raw_modifier.py  type_replacement_modifier.py  vanilla_dta_modifier.py  vanilla_dtaeval_modifier.py
tests/: test_basics.py  test_case_modifier.py  test_dataset2lexicon.py  test_detokenizer.py  test_dtaevalmaker.py  test_dtakmaker.py  test_gptmodifier.py  test_languagedetectionmodifier.py  test_languagetoolmodifier.py  test_lmscoremodifier.py  test_modifier.py  test_replacentomcrosslayermodifier.py  test_replacerawmodifier.py  test_replacetoken1to1modifier.py  test_replacetoken1tonmodifier.py  test_ridgesmaker.py  test_seq2seq_raw_modifier.py  test_split_dataset_cli.py
tests/testdata/: testfile_001-pretty.jsonl  testfile_001.jsonl  testfile_002.jsonl
tests/testdata/dtaeval/: fontane_stechlin_1899.xml
tests/testdata/languagetool/: rules.txt
(+24 files in other folders)
