[project]
name = "transnormer-data"
version = "0.1.0"
description = "Data preprocessing for the transnormer project."
authors = [
  { name = "Yannic Bracke (BBAW)", email = "yannic.bracke@bbaw.de" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9+",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets>=2.15.0", 
    "nltk>=3.8.1",
    "spacy>=3.7.2",
    "torch==1.12.0",
    "lxml>=4.9.3"
]

[project.urls]
# "Homepage" = "https://github.com/ybracke/transnormer"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true