[project]
name = "transnormer-data"
version = "0.1.0"
description = "Data preprocessing for the transnormer project."
authors = [
  { name = "Yannic Bracke (BBAW)", email = "yannic.bracke@bbaw.de" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10+",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets>=2.15.0", 
    "nltk>=3.8.1",
    "torch==1.12.0",
    "lxml>=4.9.3",
    "spacy>=3.7.2,<4.0.0",
    "de_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl",
    "textalign@git+ssh://git@github.com/ybracke/textalign",
    "language-tool-python>=2.8",
    "scikit-learn==1.2.1",
    "py3langid==0.2.2",
    "pycld3==0.22",
    "fasttext-wheel",

]

[project.urls]
"Homepage" = "https://github.com/ybracke/transnormer-data"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true